--- a/Rapport/1Chapters/2Concept/OverallSystemDesign.tex
+++ b/Rapport/1Chapters/2Concept/OverallSystemDesign.tex
@@ -23,7 +23,7 @@ For an analogue system, components such as resistors, capacitors, inductors, tra
 As the system to be developed, most likely will rely on signal processing, the great disadvantages of an analogue system is the constraints and flexibility to apply signal processing compared to a digital system. Some applications such as the Fourier Transformation is very hard if not impossible to realize in an analogue system while realizable in a digital system through algorithms. Also, if the system is large, an analogue system might turn out to be very complex.%, and use more components which results in more distortion. 
 As the system to be developed is relying on signal processing the platform is chosen to be digital.
 
-\subsection{Real-time System}
+\subsection{Real-time System} \label{sec:RealTime}
 Because a digital system is going to be used the question arises of using real-time or none real time. It diverges again in advantages and disadvantages of both systems. %A brief overview will be given which will be used to support the chosen system.
 
 \subsubsection*{Real-time}
