--- a/Rapport/1Chapters/2Concept/TechnicalAnalysisMain.tex
+++ b/Rapport/1Chapters/2Concept/TechnicalAnalysisMain.tex
@@ -7,6 +7,6 @@
 
 \input{1Chapters/2Concept/signalProcessingConclusion.tex}
 
-\input{1Chapters/2Concept/multiband.tex}
+%\input{1Chapters/2Concept/multiband.tex}
 
 %\input{1Chapters/1Preanalysis/PartConclusion.tex}
