new updates and files

--- a/Rapport/2Appendix/dspSetup.tex
+++ b/Rapport/2Appendix/dspSetup.tex
@@ -42,7 +42,7 @@ void I2S_init(uint8 Type){
 \section{TLV320AIC3204 setup}
 
 
-\section{UART setup}
+\section{UART setup} \label{UART_setup}
 
 \begin{lstlisting}[language=C, caption = {Initialization of UART},label={listingUartInit}]
 // By 16gr640, Spring 2016, AAU
